# src/errors/TooManyRequestsError.ts
@@ -2,7 +2,7 @@ import AppError from "./AppError.js";
 
 class TooManyRequestsError extends AppError {
   constructor(message = "Too many requests") {
-    super(message, 429);
+    super(message, 429, "TOO_MANY_REQUESTS");
   }
 }
 
